--- a/main.css
+++ b/main.css
@@ -30,7 +30,6 @@ nav a{
 	padding-left: 100px;
 }
 
-
 nav li{
 	display: inline-block;
 	margin-right: -4px;
@@ -177,7 +176,9 @@ p{
 	padding: 5px;
 }
 .column img {
-	width: 100%
+	width: 100%;
+	height: 510px;
+	object-fit: cover;
 }
 
 * {
