--- a/main.css
+++ b/main.css
@@ -29,6 +29,16 @@ body {
 	font-family: "Source Sans Pro", sans-serif;
 	color: #4C4A47;
 }
+#header {
+	padding: 65px 0 60px;
+	position: relative;
+	border-radius: 10px 10px 0px 0px;
+}
+
+.container {
+	width: 1080px;
+	margin 0 auto;
+}
 
 #wrapper {
 	width: 1160px;
