--- a/main.css
+++ b/main.css
@@ -110,6 +110,15 @@ a {
 }
 
 /* Navigation */
+#navigation {
+	border-top: 1px solid;
+	border-bottom: 1px solid;
+	border-color: #EAE8E0;
+	background: #fff;
+	height: 60px;
+	z-index: 9999;
+	position: relative;
+}
 
 nav a{
 	text-decoration: none;
@@ -132,6 +141,13 @@ nav li{
 
 nav li li{
 	border-right: none;
+}
+
+#nav-wrapper 
+.menu li {
+	display: inline-block;
+	margin: 0 28px;
+	position: relative;
 }
 
 
@@ -408,4 +424,35 @@ footer .instagram-title {
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	font-size: 12px;
+}
+
+/* social Widgets */
+
+#footer-social{
+	text-align: center;
+	padding: 30px 0;
+	border-top: 1px solid;
+	border-bottom: 1px solid;
+	border-color: #EAE8E0;
+}	
+
+#footer-social
+a i {
+	margin-right: 4px;
+}
+
+.fa {
+	display: inline-block;
+	font: normal normal normal 14px/1 FontAwesome;
+	font-size: inherit;
+	text-rendering: auto;
+	-webkit-font-smoothing: antialiased;
+	transform: translate(0, 0);
+}
+#footer-social a{
+	margin: 0 22px;
+	color: #a5a5a5;
+	font-size: 11px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
 }
