--- a/main.css
+++ b/main.css
@@ -40,6 +40,12 @@ body {
 	margin 0 auto;
 }
 
+#content {
+	width: 100%;
+	overflow: hidden;
+	padding-top: 45px;
+}
+
 #wrapper {
 	width: 1160px;
 	margin: 0 auto;
@@ -47,6 +53,11 @@ body {
 	box-shadow: 0 0 5px 5px rgba(200,200,200,.05);
     border-radius: 10px;
     margin-top: 30px;;
+}
+
+.featured-area{
+	overflow: hidden;
+	margin-top: 40px;
 }
 
 a{
@@ -324,6 +335,7 @@ nav li ul li{
 }
 
 .feat-overlay {
+	display: flex;
 	position: relative;
 	bottom: 0;
 	width: auto;
@@ -343,6 +355,18 @@ nav li ul li{
 }
 
 /* Body */
+
+.two-cols{
+	display: flex;
+}
+
+.content{ 
+	flext: 70%;
+ }
+
+ section{
+ 	flex: 30%;
+ }
 
 .Hauptteil {
 	display: flex;
@@ -377,6 +401,27 @@ a.post-header h2 a, .post-header h1 {
 	font-family: "Source Sans Pro", sans-serif;
 }
 
+/*Section */
+
+.promo-item a{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+}
+
+.about-widget{
+	background: transparent;
+	border: 1px solid;
+	border-color: #ddd;
+	padding: 25px 20px 22px;
+	display: block;
+	position: relative;
+	margin-bottom: 40px;
+	box-sizing: border-box;
+}
+
 /* Angaben Autor */
 .meta-text {
 	font-size: 12px;
@@ -392,6 +437,14 @@ a.post-header h2 a, .post-header h1 {
 	font-style: italic;
 	color: #999;
 	margin-right: 1px;
+}
+.post-meta{
+	overflow: hidden;
+	border-top: 1px solid #eBe8e8;
+	border-bottom: 4px double #e5e5e5;
+	padding-bottom: 13px;
+	padding-top: 13px;
+	margin-top: 25px;
 }
 
 /* Instagram Footer */
