--- a/main.css
+++ b/main.css
@@ -390,9 +390,13 @@ a.post-header h2 a, .post-header h1 {
 	color: #000;
 }
 
-.post-img {
+.m-teaserlist_item
+ .post-img {
 	margin-bottom: 22px;
 	text-align: center;
+	width: 350px;
+	height: 460px;
+	object-fit: cover;
 }
 .post-entry p, .post-entry hr {
 	margin-bottom: 20px;
@@ -403,15 +407,7 @@ a.post-header h2 a, .post-header h1 {
 
 /*Section */
 
-.promo-item a{
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-}
-
-.about-widget{
+.about-widget, .social-widget {
 	background: transparent;
 	border: 1px solid;
 	border-color: #ddd;
@@ -420,6 +416,32 @@ a.post-header h2 a, .post-header h1 {
 	position: relative;
 	margin-bottom: 40px;
 	box-sizing: border-box;
+}
+
+.promo-item a{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+}
+
+.promo-overlay{
+	height: 100%;
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
+}
+
+.promo-overlay h4 {
+	color: #000;
+	line-height: 1.6em;
+	padding: 10px 13px;
+	font-size: 11px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	background: rgba(225,225,255,1);
+	display: inline-block;
 }
 
 /* Angaben Autor */
@@ -452,14 +474,15 @@ a.post-header h2 a, .post-header h1 {
 	display: flex;
 }
 
-.column-footer {
-	flex-basis: 16.67%;
+.footer-column {
+	position: relative;
 }
 
 .row-footer img {
 	width: 193px;
 	height: 193px;
 	object-fit: cover;
+	margin: -2px;
 }
 
 .row-footer img:hover{
@@ -467,16 +490,19 @@ a.post-header h2 a, .post-header h1 {
 }
 
 footer .instagram-title {
-	position: relative;
+	position: absolute;
 	top: 50%;
 	left: 50%;
 	background: #fff;
-	transform: -50%, -50%;
+	transform: translate(-50%, -50%);
 	padding: 18px 20px;
 	z-index: 999;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	font-size: 12px;
+}
+.instagram-text {
+	text-align: center;
 }
 
 /* social Widgets */
